[project]
name = "caipe-webex-bot"
version = "0.5.0"
description = "CAIPE Webex Bot"
license = "Apache-2.0"
authors = [
  { name = "CNOE Contributors" }
]
requires-python = ">=3.13,<4.0"
dependencies = [
  "setuptools==82.0.1",
  "httpx==0.28.1",
  "requests==2.33.0",
  "pydantic==2.12.5",
  "pyyaml==6.0.3",
  "pymongo==4.10.1",
  "pyjwt[crypto]==2.12.1",
  "loguru==0.7.3",
  "aiohttp>=3.13.5",
  "websockets>=16.0",
]

[dependency-groups]
unittest = [
  "pytest==9.0.3",
  "pytest-mock==3.15.1",
]
dev = [
  "watchfiles==1.1.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple/"
