[project]
name = "mcp-aws"
version = "0.1.0"
description = "AWS MCP Server — aws_cli_execute and eks_kubectl_execute tools over HTTP/SSE"
license = "Apache-2.0"
authors = [
  { name = "Sri Aradhyula", email = "sraradhy@cisco.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastmcp==3.3.1",
  "mcp==1.28.1",
  "pydantic==2.12.5",
  "python-dotenv==1.2.2",
]

[tool.uv]
# Run from source (flat module layout: server.py at the project root). uv
# installs only the dependencies, not this project as a package.
package = false
