[project]
name = "mcp_webex_meetings"
description = "Local MCP server proxying Webex Meetings/Transcripts/Recordings REST API. Tool surface mirrors Cisco's official Webex Meetings MCP for drop-in replacement."
authors = [
    { email = "suwhang@cisco.com" }
]
dynamic = [
    "version"
]
readme = "README.md"
keywords = ["webex", "meetings", "mcp"]
requires-python = ">=3.13,<3.14"
dependencies = [
    "click==8.3.1",
    "mcp==1.27.1",
    "pydantic==2.12.5",
    "httpx==0.28.1",
    "python-dotenv==1.2.2",
    "fastmcp==3.2.4",
    "typing-extensions==4.15.0",
]

[tool.uv]
constraint-dependencies = ["uv==0.11.6"]

[dependency-groups]
dev = [
    "pyright==1.1.408",
    "ruff==0.15.1",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "hatch==1.16.3",
]

[tool.hatch.version]
path = "mcp_webex_meetings/__about__.py"

[project.scripts]
mcp-server-webex-meetings = "mcp_webex_meetings:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.hatch.build.targets.wheel]
packages = ["mcp_webex_meetings"]
