[project]
name = "mcp-webex"
version = "0.0.1"
description = "A Model Context Protocol server providing tools to act with Webex via LLMs"
authors = [
    { name = "Torben Tretau", email = "ttretau@cisco.com" }
]
readme = "README.md"
keywords = ["webex", "mcp", "llm", "automation"]
requires-python = ">=3.13,<4.0"
dependencies = [
    "click==8.3.1",
    "mcp==1.27.1",
    "mcp-agent-auth", # gitleaks:allow - package name, not a credential
    "pydantic==2.12.5",
    "httpx==0.28.1",
    "python-dotenv==1.2.2",
    "fastmcp==3.2.4",
    "typing-extensions==4.15.0",
]

[tool.uv]
# Run from source (flat module layout: server.py, mcp_server.py at the project
# root). uv installs only the dependencies, not this project as a package.
package = false
dev-dependencies = [
    "pyright==1.1.408",
    "ruff==0.15.1",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
]

[tool.uv.sources]
mcp-agent-auth = { path = "../common/mcp-auth", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
